--- a/SASS/scss/style.scss
+++ b/SASS/scss/style.scss
@@ -1,3 +1,10 @@
+//Criando variáveis para serem reutilizadas
+
+$purple:#A050BE;
+$light-grey:  #eaeaeb;
+$dark-grey: #464646;
+
+
 .header {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -13,8 +20,8 @@
 .header__menu .menu__list {
     display: flex;
     justify-content: center;
-    border-top: 1px solid #eaeaeb;
-    border-bottom: 1px solid #eaeaeb;
+    border-top: 1px solid $light-grey;
+    border-bottom: 1px solid $light-grey;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
@@ -34,15 +41,15 @@
     margin: auto;
     height: 15px;
     width: 1px;
-    background-color: #eaeaeb;
+    background-color: $light-grey;
 }
 
 .header__menu .menu__list .menu__links .menu__link {
     padding: 0 25px;
-    color: #464646;
+    color: $dark-grey;
 
 }
 
 .header__menu .menu__list .menu__links .menu__link:hover {
-    color: #A050BE;
+    color: $purple;
 }
